--- a/palazzoStyle.css
+++ b/palazzoStyle.css
@@ -1,6 +1,6 @@
 body{
     background-repeat: no-repeat;
-    background-image: url(palazzodipinto.jpg);
+    background-image: url(palazzo-ducale.jpg);
     background-size: 100%;
     text-align: center;
     background-attachment: fixed;
